// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IncomesService should return all incomes for user 1`] = `
{
  "currentPage": 1,
  "data": [
    {
      "amount": 3500,
      "categories": [],
      "date": 2023-01-10T11:12:00.000Z,
      "description": "Income13 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc93a0",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-12-10T11:12:00.000Z,
      "description": "Income12 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc939a",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-11-10T11:12:00.000Z,
      "description": "Income11 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc9394",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-10-10T11:12:00.000Z,
      "description": "Income10 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc938e",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-09-10T11:12:00.000Z,
      "description": "Income 9 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc9388",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-08-10T11:12:00.000Z,
      "description": "Income 8 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc9382",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-07-10T11:12:00.000Z,
      "description": "Income 7 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc937c",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-06-10T11:12:00.000Z,
      "description": "Income 6 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc9376",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-05-10T11:12:00.000Z,
      "description": "Income 5 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc9370",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-04-10T11:12:00.000Z,
      "description": "Income 4 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc936a",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-03-10T11:12:00.000Z,
      "description": "Income 3 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc9364",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-02-10T11:12:00.000Z,
      "description": "Income 2 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc935e",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1795.58,
      "categories": [
        {
          "amount": 700,
          "categoryId": "623b58ada3deba9879422fbf",
          "createdAt": 2024-05-10T10:21:18.365Z,
          "description": "",
          "id": "637e2389bda8050a85b1b760",
          "transactionId": "624bef946ba655edad8f7f3d",
          "updatedAt": 2024-05-10T10:21:18.365Z,
          "userId": "61460d7354ea082ad0256749",
          "v": 0,
        },
        {
          "amount": 1095.58,
          "categoryId": "623b6b91a3deba9879422fe1",
          "createdAt": 2024-05-10T10:21:18.365Z,
          "description": "",
          "id": "637e2389bda8050a85b1b761",
          "transactionId": "624bef946ba655edad8f7f3d",
          "updatedAt": 2024-05-10T10:21:18.365Z,
          "userId": "61460d7354ea082ad0256749",
          "v": 0,
        },
      ],
      "date": 2022-01-23T22:28:00.000Z,
      "description": "Dummy income 23",
      "fromAccount": null,
      "id": "624bef946ba655edad8f7f3d",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1571.53,
      "categories": [
        {
          "amount": 1571.53,
          "categoryId": "623b58ada3deba9879422fbf",
          "createdAt": 2024-05-10T10:21:18.365Z,
          "description": "",
          "id": "637e239cbda8050a85b1b7b8",
          "transactionId": "624bef936ba655edad8f7f33",
          "updatedAt": 2024-05-10T10:21:18.365Z,
          "userId": "61460d7354ea082ad0256749",
          "v": 0,
        },
      ],
      "date": 2022-01-21T03:11:00.000Z,
      "description": "Dummy income 21",
      "fromAccount": null,
      "id": "624bef936ba655edad8f7f33",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1927.77,
      "categories": [],
      "date": 2022-01-20T06:13:00.000Z,
      "description": "Dummy income 80",
      "fromAccount": null,
      "id": "624bef9e6ba655edad8f805a",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1712.21,
      "categories": [],
      "date": 2022-01-18T23:33:00.000Z,
      "description": "Dummy income 34",
      "fromAccount": null,
      "id": "624bef966ba655edad8f7f74",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1976.82,
      "categories": [],
      "date": 2022-01-18T19:29:00.000Z,
      "description": "Dummy income 2",
      "fromAccount": null,
      "id": "624bef906ba655edad8f7ed4",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 882.42,
      "categories": [],
      "date": 2022-01-16T19:47:00.000Z,
      "description": "Dummy income 87",
      "fromAccount": null,
      "id": "624befa06ba655edad8f807d",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1926.89,
      "categories": [],
      "date": 2022-01-16T10:23:00.000Z,
      "description": "Dummy income 69",
      "fromAccount": null,
      "id": "624bef9c6ba655edad8f8023",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 604.32,
      "categories": [],
      "date": 2022-01-12T05:25:00.000Z,
      "description": "Dummy income 90",
      "fromAccount": null,
      "id": "624befa06ba655edad8f808c",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-01-10T11:12:00.000Z,
      "description": "Income 1 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc9358",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1317.76,
      "categories": [],
      "date": 2022-01-02T08:04:00.000Z,
      "description": "Dummy income 85",
      "fromAccount": null,
      "id": "624bef9f6ba655edad8f8073",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 583.31,
      "categories": [],
      "date": 2021-12-20T09:07:00.000Z,
      "description": "Dummy income 81",
      "fromAccount": null,
      "id": "624bef9f6ba655edad8f805f",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1860.46,
      "categories": [],
      "date": 2021-12-17T10:21:00.000Z,
      "description": "Dummy income 50",
      "fromAccount": null,
      "id": "624bef996ba655edad8f7fc4",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1554.87,
      "categories": [],
      "date": 2021-12-12T23:56:00.000Z,
      "description": "Dummy income 63",
      "fromAccount": null,
      "id": "624bef9b6ba655edad8f8005",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1284.77,
      "categories": [],
      "date": 2021-12-05T00:29:00.000Z,
      "description": "Dummy income 13",
      "fromAccount": null,
      "id": "624bef926ba655edad8f7f0b",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1369.11,
      "categories": [],
      "date": 2021-12-01T07:43:00.000Z,
      "description": "Dummy income 94",
      "fromAccount": null,
      "id": "624befa16ba655edad8f80a0",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1733.77,
      "categories": [],
      "date": 2021-11-19T21:51:00.000Z,
      "description": "Dummy income 41",
      "fromAccount": null,
      "id": "624bef976ba655edad8f7f97",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 955.05,
      "categories": [],
      "date": 2021-11-13T13:43:00.000Z,
      "description": "Dummy income 54",
      "fromAccount": null,
      "id": "624bef9a6ba655edad8f7fd8",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1145.62,
      "categories": [],
      "date": 2021-11-07T04:45:00.000Z,
      "description": "Dummy income 17",
      "fromAccount": null,
      "id": "624bef936ba655edad8f7f1f",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 469.16,
      "categories": [],
      "date": 2021-11-06T22:06:00.000Z,
      "description": "Dummy income 61",
      "fromAccount": null,
      "id": "624bef9b6ba655edad8f7ffb",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1141.4,
      "categories": [],
      "date": 2021-11-06T00:38:00.000Z,
      "description": "Dummy income 72",
      "fromAccount": null,
      "id": "624bef9d6ba655edad8f8032",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1757.99,
      "categories": [],
      "date": 2021-10-31T06:51:00.000Z,
      "description": "Dummy income 52",
      "fromAccount": null,
      "id": "624bef996ba655edad8f7fce",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1216.58,
      "categories": [],
      "date": 2021-10-24T17:57:00.000Z,
      "description": "Dummy income 38",
      "fromAccount": null,
      "id": "624bef976ba655edad8f7f88",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 632.82,
      "categories": [],
      "date": 2021-10-23T14:18:00.000Z,
      "description": "Dummy income 88",
      "fromAccount": null,
      "id": "624befa06ba655edad8f8082",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1216.51,
      "categories": [],
      "date": 2021-10-17T17:59:00.000Z,
      "description": "Dummy income 42",
      "fromAccount": null,
      "id": "624bef976ba655edad8f7f9c",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 447.51,
      "categories": [],
      "date": 2021-10-17T08:37:00.000Z,
      "description": "Dummy income 62",
      "fromAccount": null,
      "id": "624bef9b6ba655edad8f8000",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1973.73,
      "categories": [],
      "date": 2021-10-16T23:29:00.000Z,
      "description": "Dummy income 20",
      "fromAccount": null,
      "id": "624bef936ba655edad8f7f2e",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1836.42,
      "categories": [],
      "date": 2021-10-16T17:07:00.000Z,
      "description": "Dummy income 64",
      "fromAccount": null,
      "id": "624bef9c6ba655edad8f800a",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1288.56,
      "categories": [],
      "date": 2021-10-14T20:45:00.000Z,
      "description": "Dummy income 32",
      "fromAccount": null,
      "id": "624bef966ba655edad8f7f6a",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 567.15,
      "categories": [],
      "date": 2021-10-12T07:10:00.000Z,
      "description": "Dummy income 55",
      "fromAccount": null,
      "id": "624bef9a6ba655edad8f7fdd",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 548.07,
      "categories": [],
      "date": 2021-10-11T14:51:00.000Z,
      "description": "Dummy income 95",
      "fromAccount": null,
      "id": "624befa16ba655edad8f80a5",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1798.92,
      "categories": [],
      "date": 2021-10-01T02:41:00.000Z,
      "description": "Dummy income 84",
      "fromAccount": null,
      "id": "624bef9f6ba655edad8f806e",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1365.27,
      "categories": [],
      "date": 2021-09-26T04:20:00.000Z,
      "description": "Dummy income 27",
      "fromAccount": null,
      "id": "624bef956ba655edad8f7f51",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1702.72,
      "categories": [],
      "date": 2021-09-21T16:44:00.000Z,
      "description": "Dummy income 1",
      "fromAccount": null,
      "id": "624bef906ba655edad8f7ecf",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1323.89,
      "categories": [],
      "date": 2021-09-21T11:35:00.000Z,
      "description": "Dummy income 58",
      "fromAccount": null,
      "id": "624bef9a6ba655edad8f7fec",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 56.46,
      "categories": [],
      "date": 2021-09-08T06:42:00.000Z,
      "description": "Dummy income 12",
      "fromAccount": null,
      "id": "624bef926ba655edad8f7f06",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 616.12,
      "categories": [],
      "date": 2021-09-04T13:37:00.000Z,
      "description": "Dummy income 40",
      "fromAccount": null,
      "id": "624bef976ba655edad8f7f92",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 95.45,
      "categories": [],
      "date": 2021-08-29T01:13:00.000Z,
      "description": "Dummy income 93",
      "fromAccount": null,
      "id": "624befa16ba655edad8f809b",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1385.56,
      "categories": [],
      "date": 2021-08-24T16:11:00.000Z,
      "description": "Dummy income 22",
      "fromAccount": null,
      "id": "624bef946ba655edad8f7f38",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 441.11,
      "categories": [],
      "date": 2021-08-24T11:03:00.000Z,
      "description": "Dummy income 75",
      "fromAccount": null,
      "id": "624bef9d6ba655edad8f8041",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 209.29,
      "categories": [],
      "date": 2021-08-24T01:02:00.000Z,
      "description": "Dummy income 57",
      "fromAccount": null,
      "id": "624bef9a6ba655edad8f7fe7",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1862.3,
      "categories": [],
      "date": 2021-08-22T14:16:00.000Z,
      "description": "Dummy income 25",
      "fromAccount": null,
      "id": "624bef946ba655edad8f7f47",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1700.08,
      "categories": [],
      "date": 2021-08-22T13:14:00.000Z,
      "description": "Dummy income 43",
      "fromAccount": null,
      "id": "624bef986ba655edad8f7fa1",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 426.46,
      "categories": [],
      "date": 2021-08-18T09:21:00.000Z,
      "description": "Dummy income 10",
      "fromAccount": null,
      "id": "624bef916ba655edad8f7efc",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1040.8,
      "categories": [],
      "date": 2021-08-14T20:02:00.000Z,
      "description": "Dummy income 73",
      "fromAccount": null,
      "id": "624bef9d6ba655edad8f8037",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1358.23,
      "categories": [],
      "date": 2021-08-14T12:45:00.000Z,
      "description": "Dummy income 8",
      "fromAccount": null,
      "id": "624bef916ba655edad8f7ef2",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1881.52,
      "categories": [],
      "date": 2021-08-08T03:47:00.000Z,
      "description": "Dummy income 7",
      "fromAccount": null,
      "id": "624bef916ba655edad8f7eed",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1975.42,
      "categories": [],
      "date": 2021-07-28T03:35:00.000Z,
      "description": "Dummy income 68",
      "fromAccount": null,
      "id": "624bef9c6ba655edad8f801e",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 723.92,
      "categories": [],
      "date": 2021-07-24T13:04:00.000Z,
      "description": "Dummy income 33",
      "fromAccount": null,
      "id": "624bef966ba655edad8f7f6f",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1244.46,
      "categories": [],
      "date": 2021-07-20T03:26:00.000Z,
      "description": "Dummy income 67",
      "fromAccount": null,
      "id": "624bef9c6ba655edad8f8019",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 961.29,
      "categories": [],
      "date": 2021-07-13T11:55:00.000Z,
      "description": "Dummy income 59",
      "fromAccount": null,
      "id": "624bef9b6ba655edad8f7ff1",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1296.72,
      "categories": [],
      "date": 2021-07-10T09:18:00.000Z,
      "description": "Dummy income 16",
      "fromAccount": null,
      "id": "624bef936ba655edad8f7f1a",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1617.49,
      "categories": [],
      "date": 2021-07-09T13:57:00.000Z,
      "description": "Dummy income 51",
      "fromAccount": null,
      "id": "624bef996ba655edad8f7fc9",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1826.92,
      "categories": [],
      "date": 2021-07-03T18:19:00.000Z,
      "description": "Dummy income 29",
      "fromAccount": null,
      "id": "624bef956ba655edad8f7f5b",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1068.27,
      "categories": [],
      "date": 2021-07-01T17:05:00.000Z,
      "description": "Dummy income 28",
      "fromAccount": null,
      "id": "624bef956ba655edad8f7f56",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 827.99,
      "categories": [],
      "date": 2021-07-01T14:07:00.000Z,
      "description": "Dummy income 74",
      "fromAccount": null,
      "id": "624bef9d6ba655edad8f803c",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 926.68,
      "categories": [],
      "date": 2021-07-01T09:19:00.000Z,
      "description": "Dummy income 82",
      "fromAccount": null,
      "id": "624bef9f6ba655edad8f8064",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 853.86,
      "categories": [],
      "date": 2021-07-01T04:39:00.000Z,
      "description": "Dummy income 86",
      "fromAccount": null,
      "id": "624befa06ba655edad8f8078",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 29.57,
      "categories": [],
      "date": 2021-06-25T02:43:00.000Z,
      "description": "Dummy income 79",
      "fromAccount": null,
      "id": "624bef9e6ba655edad8f8055",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1453.46,
      "categories": [],
      "date": 2021-06-24T10:38:00.000Z,
      "description": "Dummy income 71",
      "fromAccount": null,
      "id": "624bef9d6ba655edad8f802d",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 381.28,
      "categories": [],
      "date": 2021-06-17T14:49:00.000Z,
      "description": "Dummy income 65",
      "fromAccount": null,
      "id": "624bef9c6ba655edad8f800f",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1299.2,
      "categories": [],
      "date": 2021-06-17T09:39:00.000Z,
      "description": "Dummy income 99",
      "fromAccount": null,
      "id": "624befa26ba655edad8f80b9",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1292.28,
      "categories": [],
      "date": 2021-06-08T03:28:00.000Z,
      "description": "Dummy income 92",
      "fromAccount": null,
      "id": "624befa16ba655edad8f8096",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 192.67,
      "categories": [],
      "date": 2021-06-06T03:12:00.000Z,
      "description": "Dummy income 60",
      "fromAccount": null,
      "id": "624bef9b6ba655edad8f7ff6",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1725.94,
      "categories": [],
      "date": 2021-06-05T12:02:00.000Z,
      "description": "Dummy income 31",
      "fromAccount": null,
      "id": "624bef956ba655edad8f7f65",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 419.53,
      "categories": [],
      "date": 2021-06-04T09:01:00.000Z,
      "description": "Dummy income 5",
      "fromAccount": null,
      "id": "624bef906ba655edad8f7ee3",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1925.73,
      "categories": [],
      "date": 2021-05-30T08:06:00.000Z,
      "description": "Dummy income 37",
      "fromAccount": null,
      "id": "624bef966ba655edad8f7f83",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 675,
      "categories": [],
      "date": 2021-05-25T03:50:00.000Z,
      "description": "Dummy income 96",
      "fromAccount": null,
      "id": "624befa16ba655edad8f80aa",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 627.26,
      "categories": [],
      "date": 2021-05-22T03:19:00.000Z,
      "description": "Dummy income 70",
      "fromAccount": null,
      "id": "624bef9d6ba655edad8f8028",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 806.03,
      "categories": [],
      "date": 2021-05-14T02:53:00.000Z,
      "description": "Dummy income 36",
      "fromAccount": null,
      "id": "624bef966ba655edad8f7f7e",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1659.73,
      "categories": [],
      "date": 2021-05-09T14:49:00.000Z,
      "description": "Dummy income 98",
      "fromAccount": null,
      "id": "624befa26ba655edad8f80b4",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1640.77,
      "categories": [],
      "date": 2021-05-08T01:59:00.000Z,
      "description": "Dummy income 4",
      "fromAccount": null,
      "id": "624bef906ba655edad8f7ede",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1599.77,
      "categories": [],
      "date": 2021-05-07T00:37:00.000Z,
      "description": "Dummy income 9",
      "fromAccount": null,
      "id": "624bef916ba655edad8f7ef7",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1425.65,
      "categories": [],
      "date": 2021-05-05T02:13:00.000Z,
      "description": "Dummy income 15",
      "fromAccount": null,
      "id": "624bef926ba655edad8f7f15",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 511.89,
      "categories": [],
      "date": 2021-05-01T19:06:00.000Z,
      "description": "Dummy income 76",
      "fromAccount": null,
      "id": "624bef9e6ba655edad8f8046",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 249.67,
      "categories": [],
      "date": 2021-05-01T15:43:00.000Z,
      "description": "Dummy income 6",
      "fromAccount": null,
      "id": "624bef916ba655edad8f7ee8",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 561.8,
      "categories": [],
      "date": 2021-05-01T06:25:00.000Z,
      "description": "Dummy income 89",
      "fromAccount": null,
      "id": "624befa06ba655edad8f8087",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1545.25,
      "categories": [],
      "date": 2021-04-29T02:06:00.000Z,
      "description": "Dummy income 78",
      "fromAccount": null,
      "id": "624bef9e6ba655edad8f8050",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1552.1,
      "categories": [],
      "date": 2021-04-28T23:10:00.000Z,
      "description": "Dummy income 18",
      "fromAccount": null,
      "id": "624bef936ba655edad8f7f24",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 20.81,
      "categories": [],
      "date": 2021-04-28T22:24:00.000Z,
      "description": "Dummy income 83",
      "fromAccount": null,
      "id": "624bef9f6ba655edad8f8069",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1025.85,
      "categories": [],
      "date": 2021-04-25T23:36:00.000Z,
      "description": "Dummy income 26",
      "fromAccount": null,
      "id": "624bef946ba655edad8f7f4c",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1368.8,
      "categories": [],
      "date": 2021-04-18T22:56:00.000Z,
      "description": "Dummy income 46",
      "fromAccount": null,
      "id": "624bef986ba655edad8f7fb0",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 86.6,
      "categories": [],
      "date": 2021-04-16T06:52:00.000Z,
      "description": "Dummy income 0",
      "fromAccount": null,
      "id": "624bef906ba655edad8f7eca",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 424.87,
      "categories": [],
      "date": 2021-04-14T15:55:00.000Z,
      "description": "Dummy income 3",
      "fromAccount": null,
      "id": "624bef906ba655edad8f7ed9",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1138.28,
      "categories": [],
      "date": 2021-04-09T06:01:00.000Z,
      "description": "Dummy income 91",
      "fromAccount": null,
      "id": "624befa16ba655edad8f8091",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1649.63,
      "categories": [],
      "date": 2021-04-06T05:01:00.000Z,
      "description": "Dummy income 45",
      "fromAccount": null,
      "id": "624bef986ba655edad8f7fab",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1494.56,
      "categories": [],
      "date": 2021-03-27T04:19:00.000Z,
      "description": "Dummy income 53",
      "fromAccount": null,
      "id": "624bef996ba655edad8f7fd3",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 22.22,
      "categories": [],
      "date": 2021-03-22T09:28:00.000Z,
      "description": "Dummy income 48",
      "fromAccount": null,
      "id": "624bef996ba655edad8f7fba",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 464.72,
      "categories": [],
      "date": 2021-03-22T09:07:00.000Z,
      "description": "Dummy income 24",
      "fromAccount": null,
      "id": "624bef946ba655edad8f7f42",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 8.33,
      "categories": [],
      "date": 2021-03-21T07:50:00.000Z,
      "description": "Dummy income 39",
      "fromAccount": null,
      "id": "624bef976ba655edad8f7f8d",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 200.18,
      "categories": [],
      "date": 2021-03-16T09:37:00.000Z,
      "description": "Dummy income 66",
      "fromAccount": null,
      "id": "624bef9c6ba655edad8f8014",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 526.83,
      "categories": [],
      "date": 2021-03-09T23:01:00.000Z,
      "description": "Dummy income 56",
      "fromAccount": null,
      "id": "624bef9a6ba655edad8f7fe2",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 388.61,
      "categories": [],
      "date": 2021-03-07T04:35:00.000Z,
      "description": "Dummy income 30",
      "fromAccount": null,
      "id": "624bef956ba655edad8f7f60",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1271.55,
      "categories": [],
      "date": 2021-03-06T16:43:00.000Z,
      "description": "Dummy income 44",
      "fromAccount": null,
      "id": "624bef986ba655edad8f7fa6",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1548.66,
      "categories": [],
      "date": 2021-03-05T16:29:00.000Z,
      "description": "Dummy income 19",
      "fromAccount": null,
      "id": "624bef936ba655edad8f7f29",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1412.28,
      "categories": [],
      "date": 2021-03-04T02:58:00.000Z,
      "description": "Dummy income 11",
      "fromAccount": null,
      "id": "624bef926ba655edad8f7f01",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1714.34,
      "categories": [],
      "date": 2021-03-02T06:07:00.000Z,
      "description": "Dummy income 97",
      "fromAccount": null,
      "id": "624befa26ba655edad8f80af",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1704.16,
      "categories": [],
      "date": 2021-02-28T01:30:00.000Z,
      "description": "Dummy income 14",
      "fromAccount": null,
      "id": "624bef926ba655edad8f7f10",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 459.72,
      "categories": [],
      "date": 2021-02-23T13:28:00.000Z,
      "description": "Dummy income 77",
      "fromAccount": null,
      "id": "624bef9e6ba655edad8f804b",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 493.54,
      "categories": [],
      "date": 2021-02-22T15:11:00.000Z,
      "description": "Dummy income 47",
      "fromAccount": null,
      "id": "624bef986ba655edad8f7fb5",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1854.37,
      "categories": [],
      "date": 2021-02-21T02:29:00.000Z,
      "description": "Dummy income 49",
      "fromAccount": null,
      "id": "624bef996ba655edad8f7fbf",
      "toAccount": "61460de154ea082ad0256786",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1598.18,
      "categories": [],
      "date": 2021-02-07T18:14:00.000Z,
      "description": "Dummy income 35",
      "fromAccount": null,
      "id": "624bef966ba655edad8f7f79",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
  ],
  "hasNextPage": false,
  "hasPreviousPage": false,
  "limit": 113,
  "totalPageCount": 1,
  "totalRowCount": 113,
}
`;

exports[`IncomesService should return all incomes for user for specified account types 1`] = `
{
  "currentPage": 1,
  "data": [
    {
      "amount": 3500,
      "categories": [],
      "date": 2023-01-10T11:12:00.000Z,
      "description": "Income13 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc93a0",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-12-10T11:12:00.000Z,
      "description": "Income12 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc939a",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-11-10T11:12:00.000Z,
      "description": "Income11 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc9394",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-10-10T11:12:00.000Z,
      "description": "Income10 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc938e",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-09-10T11:12:00.000Z,
      "description": "Income 9 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc9388",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-08-10T11:12:00.000Z,
      "description": "Income 8 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc9382",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-07-10T11:12:00.000Z,
      "description": "Income 7 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc937c",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-06-10T11:12:00.000Z,
      "description": "Income 6 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc9376",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-05-10T11:12:00.000Z,
      "description": "Income 5 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc9370",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-04-10T11:12:00.000Z,
      "description": "Income 4 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc936a",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-03-10T11:12:00.000Z,
      "description": "Income 3 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc9364",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-02-10T11:12:00.000Z,
      "description": "Income 2 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc935e",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1571.53,
      "categories": [
        {
          "amount": 1571.53,
          "categoryId": "623b58ada3deba9879422fbf",
          "createdAt": 2024-05-10T10:21:18.365Z,
          "description": "",
          "id": "637e239cbda8050a85b1b7b8",
          "transactionId": "624bef936ba655edad8f7f33",
          "updatedAt": 2024-05-10T10:21:18.365Z,
          "userId": "61460d7354ea082ad0256749",
          "v": 0,
        },
      ],
      "date": 2022-01-21T03:11:00.000Z,
      "description": "Dummy income 21",
      "fromAccount": null,
      "id": "624bef936ba655edad8f7f33",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1927.77,
      "categories": [],
      "date": 2022-01-20T06:13:00.000Z,
      "description": "Dummy income 80",
      "fromAccount": null,
      "id": "624bef9e6ba655edad8f805a",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1712.21,
      "categories": [],
      "date": 2022-01-18T23:33:00.000Z,
      "description": "Dummy income 34",
      "fromAccount": null,
      "id": "624bef966ba655edad8f7f74",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1976.82,
      "categories": [],
      "date": 2022-01-18T19:29:00.000Z,
      "description": "Dummy income 2",
      "fromAccount": null,
      "id": "624bef906ba655edad8f7ed4",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 882.42,
      "categories": [],
      "date": 2022-01-16T19:47:00.000Z,
      "description": "Dummy income 87",
      "fromAccount": null,
      "id": "624befa06ba655edad8f807d",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1926.89,
      "categories": [],
      "date": 2022-01-16T10:23:00.000Z,
      "description": "Dummy income 69",
      "fromAccount": null,
      "id": "624bef9c6ba655edad8f8023",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 604.32,
      "categories": [],
      "date": 2022-01-12T05:25:00.000Z,
      "description": "Dummy income 90",
      "fromAccount": null,
      "id": "624befa06ba655edad8f808c",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 3500,
      "categories": [],
      "date": 2022-01-10T11:12:00.000Z,
      "description": "Income 1 to big money",
      "fromAccount": null,
      "id": "663df5ccd8ef53dcb2bc9358",
      "toAccount": "663df55ad8ef53dcb2bc9347",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 583.31,
      "categories": [],
      "date": 2021-12-20T09:07:00.000Z,
      "description": "Dummy income 81",
      "fromAccount": null,
      "id": "624bef9f6ba655edad8f805f",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1860.46,
      "categories": [],
      "date": 2021-12-17T10:21:00.000Z,
      "description": "Dummy income 50",
      "fromAccount": null,
      "id": "624bef996ba655edad8f7fc4",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1554.87,
      "categories": [],
      "date": 2021-12-12T23:56:00.000Z,
      "description": "Dummy income 63",
      "fromAccount": null,
      "id": "624bef9b6ba655edad8f8005",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1284.77,
      "categories": [],
      "date": 2021-12-05T00:29:00.000Z,
      "description": "Dummy income 13",
      "fromAccount": null,
      "id": "624bef926ba655edad8f7f0b",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1369.11,
      "categories": [],
      "date": 2021-12-01T07:43:00.000Z,
      "description": "Dummy income 94",
      "fromAccount": null,
      "id": "624befa16ba655edad8f80a0",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1733.77,
      "categories": [],
      "date": 2021-11-19T21:51:00.000Z,
      "description": "Dummy income 41",
      "fromAccount": null,
      "id": "624bef976ba655edad8f7f97",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 955.05,
      "categories": [],
      "date": 2021-11-13T13:43:00.000Z,
      "description": "Dummy income 54",
      "fromAccount": null,
      "id": "624bef9a6ba655edad8f7fd8",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1145.62,
      "categories": [],
      "date": 2021-11-07T04:45:00.000Z,
      "description": "Dummy income 17",
      "fromAccount": null,
      "id": "624bef936ba655edad8f7f1f",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 469.16,
      "categories": [],
      "date": 2021-11-06T22:06:00.000Z,
      "description": "Dummy income 61",
      "fromAccount": null,
      "id": "624bef9b6ba655edad8f7ffb",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1141.4,
      "categories": [],
      "date": 2021-11-06T00:38:00.000Z,
      "description": "Dummy income 72",
      "fromAccount": null,
      "id": "624bef9d6ba655edad8f8032",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1757.99,
      "categories": [],
      "date": 2021-10-31T06:51:00.000Z,
      "description": "Dummy income 52",
      "fromAccount": null,
      "id": "624bef996ba655edad8f7fce",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1216.58,
      "categories": [],
      "date": 2021-10-24T17:57:00.000Z,
      "description": "Dummy income 38",
      "fromAccount": null,
      "id": "624bef976ba655edad8f7f88",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 632.82,
      "categories": [],
      "date": 2021-10-23T14:18:00.000Z,
      "description": "Dummy income 88",
      "fromAccount": null,
      "id": "624befa06ba655edad8f8082",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 447.51,
      "categories": [],
      "date": 2021-10-17T08:37:00.000Z,
      "description": "Dummy income 62",
      "fromAccount": null,
      "id": "624bef9b6ba655edad8f8000",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1973.73,
      "categories": [],
      "date": 2021-10-16T23:29:00.000Z,
      "description": "Dummy income 20",
      "fromAccount": null,
      "id": "624bef936ba655edad8f7f2e",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1836.42,
      "categories": [],
      "date": 2021-10-16T17:07:00.000Z,
      "description": "Dummy income 64",
      "fromAccount": null,
      "id": "624bef9c6ba655edad8f800a",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 567.15,
      "categories": [],
      "date": 2021-10-12T07:10:00.000Z,
      "description": "Dummy income 55",
      "fromAccount": null,
      "id": "624bef9a6ba655edad8f7fdd",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 548.07,
      "categories": [],
      "date": 2021-10-11T14:51:00.000Z,
      "description": "Dummy income 95",
      "fromAccount": null,
      "id": "624befa16ba655edad8f80a5",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1365.27,
      "categories": [],
      "date": 2021-09-26T04:20:00.000Z,
      "description": "Dummy income 27",
      "fromAccount": null,
      "id": "624bef956ba655edad8f7f51",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1702.72,
      "categories": [],
      "date": 2021-09-21T16:44:00.000Z,
      "description": "Dummy income 1",
      "fromAccount": null,
      "id": "624bef906ba655edad8f7ecf",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 56.46,
      "categories": [],
      "date": 2021-09-08T06:42:00.000Z,
      "description": "Dummy income 12",
      "fromAccount": null,
      "id": "624bef926ba655edad8f7f06",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 616.12,
      "categories": [],
      "date": 2021-09-04T13:37:00.000Z,
      "description": "Dummy income 40",
      "fromAccount": null,
      "id": "624bef976ba655edad8f7f92",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 95.45,
      "categories": [],
      "date": 2021-08-29T01:13:00.000Z,
      "description": "Dummy income 93",
      "fromAccount": null,
      "id": "624befa16ba655edad8f809b",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1385.56,
      "categories": [],
      "date": 2021-08-24T16:11:00.000Z,
      "description": "Dummy income 22",
      "fromAccount": null,
      "id": "624bef946ba655edad8f7f38",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 441.11,
      "categories": [],
      "date": 2021-08-24T11:03:00.000Z,
      "description": "Dummy income 75",
      "fromAccount": null,
      "id": "624bef9d6ba655edad8f8041",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 209.29,
      "categories": [],
      "date": 2021-08-24T01:02:00.000Z,
      "description": "Dummy income 57",
      "fromAccount": null,
      "id": "624bef9a6ba655edad8f7fe7",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1862.3,
      "categories": [],
      "date": 2021-08-22T14:16:00.000Z,
      "description": "Dummy income 25",
      "fromAccount": null,
      "id": "624bef946ba655edad8f7f47",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1700.08,
      "categories": [],
      "date": 2021-08-22T13:14:00.000Z,
      "description": "Dummy income 43",
      "fromAccount": null,
      "id": "624bef986ba655edad8f7fa1",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 426.46,
      "categories": [],
      "date": 2021-08-18T09:21:00.000Z,
      "description": "Dummy income 10",
      "fromAccount": null,
      "id": "624bef916ba655edad8f7efc",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1040.8,
      "categories": [],
      "date": 2021-08-14T20:02:00.000Z,
      "description": "Dummy income 73",
      "fromAccount": null,
      "id": "624bef9d6ba655edad8f8037",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1358.23,
      "categories": [],
      "date": 2021-08-14T12:45:00.000Z,
      "description": "Dummy income 8",
      "fromAccount": null,
      "id": "624bef916ba655edad8f7ef2",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1881.52,
      "categories": [],
      "date": 2021-08-08T03:47:00.000Z,
      "description": "Dummy income 7",
      "fromAccount": null,
      "id": "624bef916ba655edad8f7eed",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1975.42,
      "categories": [],
      "date": 2021-07-28T03:35:00.000Z,
      "description": "Dummy income 68",
      "fromAccount": null,
      "id": "624bef9c6ba655edad8f801e",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 723.92,
      "categories": [],
      "date": 2021-07-24T13:04:00.000Z,
      "description": "Dummy income 33",
      "fromAccount": null,
      "id": "624bef966ba655edad8f7f6f",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1244.46,
      "categories": [],
      "date": 2021-07-20T03:26:00.000Z,
      "description": "Dummy income 67",
      "fromAccount": null,
      "id": "624bef9c6ba655edad8f8019",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 961.29,
      "categories": [],
      "date": 2021-07-13T11:55:00.000Z,
      "description": "Dummy income 59",
      "fromAccount": null,
      "id": "624bef9b6ba655edad8f7ff1",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1296.72,
      "categories": [],
      "date": 2021-07-10T09:18:00.000Z,
      "description": "Dummy income 16",
      "fromAccount": null,
      "id": "624bef936ba655edad8f7f1a",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1617.49,
      "categories": [],
      "date": 2021-07-09T13:57:00.000Z,
      "description": "Dummy income 51",
      "fromAccount": null,
      "id": "624bef996ba655edad8f7fc9",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1826.92,
      "categories": [],
      "date": 2021-07-03T18:19:00.000Z,
      "description": "Dummy income 29",
      "fromAccount": null,
      "id": "624bef956ba655edad8f7f5b",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1068.27,
      "categories": [],
      "date": 2021-07-01T17:05:00.000Z,
      "description": "Dummy income 28",
      "fromAccount": null,
      "id": "624bef956ba655edad8f7f56",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 827.99,
      "categories": [],
      "date": 2021-07-01T14:07:00.000Z,
      "description": "Dummy income 74",
      "fromAccount": null,
      "id": "624bef9d6ba655edad8f803c",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 926.68,
      "categories": [],
      "date": 2021-07-01T09:19:00.000Z,
      "description": "Dummy income 82",
      "fromAccount": null,
      "id": "624bef9f6ba655edad8f8064",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 29.57,
      "categories": [],
      "date": 2021-06-25T02:43:00.000Z,
      "description": "Dummy income 79",
      "fromAccount": null,
      "id": "624bef9e6ba655edad8f8055",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1453.46,
      "categories": [],
      "date": 2021-06-24T10:38:00.000Z,
      "description": "Dummy income 71",
      "fromAccount": null,
      "id": "624bef9d6ba655edad8f802d",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 381.28,
      "categories": [],
      "date": 2021-06-17T14:49:00.000Z,
      "description": "Dummy income 65",
      "fromAccount": null,
      "id": "624bef9c6ba655edad8f800f",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1299.2,
      "categories": [],
      "date": 2021-06-17T09:39:00.000Z,
      "description": "Dummy income 99",
      "fromAccount": null,
      "id": "624befa26ba655edad8f80b9",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1292.28,
      "categories": [],
      "date": 2021-06-08T03:28:00.000Z,
      "description": "Dummy income 92",
      "fromAccount": null,
      "id": "624befa16ba655edad8f8096",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 192.67,
      "categories": [],
      "date": 2021-06-06T03:12:00.000Z,
      "description": "Dummy income 60",
      "fromAccount": null,
      "id": "624bef9b6ba655edad8f7ff6",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1725.94,
      "categories": [],
      "date": 2021-06-05T12:02:00.000Z,
      "description": "Dummy income 31",
      "fromAccount": null,
      "id": "624bef956ba655edad8f7f65",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 419.53,
      "categories": [],
      "date": 2021-06-04T09:01:00.000Z,
      "description": "Dummy income 5",
      "fromAccount": null,
      "id": "624bef906ba655edad8f7ee3",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1925.73,
      "categories": [],
      "date": 2021-05-30T08:06:00.000Z,
      "description": "Dummy income 37",
      "fromAccount": null,
      "id": "624bef966ba655edad8f7f83",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 675,
      "categories": [],
      "date": 2021-05-25T03:50:00.000Z,
      "description": "Dummy income 96",
      "fromAccount": null,
      "id": "624befa16ba655edad8f80aa",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 627.26,
      "categories": [],
      "date": 2021-05-22T03:19:00.000Z,
      "description": "Dummy income 70",
      "fromAccount": null,
      "id": "624bef9d6ba655edad8f8028",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 806.03,
      "categories": [],
      "date": 2021-05-14T02:53:00.000Z,
      "description": "Dummy income 36",
      "fromAccount": null,
      "id": "624bef966ba655edad8f7f7e",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1659.73,
      "categories": [],
      "date": 2021-05-09T14:49:00.000Z,
      "description": "Dummy income 98",
      "fromAccount": null,
      "id": "624befa26ba655edad8f80b4",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1640.77,
      "categories": [],
      "date": 2021-05-08T01:59:00.000Z,
      "description": "Dummy income 4",
      "fromAccount": null,
      "id": "624bef906ba655edad8f7ede",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1599.77,
      "categories": [],
      "date": 2021-05-07T00:37:00.000Z,
      "description": "Dummy income 9",
      "fromAccount": null,
      "id": "624bef916ba655edad8f7ef7",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1425.65,
      "categories": [],
      "date": 2021-05-05T02:13:00.000Z,
      "description": "Dummy income 15",
      "fromAccount": null,
      "id": "624bef926ba655edad8f7f15",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 511.89,
      "categories": [],
      "date": 2021-05-01T19:06:00.000Z,
      "description": "Dummy income 76",
      "fromAccount": null,
      "id": "624bef9e6ba655edad8f8046",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 249.67,
      "categories": [],
      "date": 2021-05-01T15:43:00.000Z,
      "description": "Dummy income 6",
      "fromAccount": null,
      "id": "624bef916ba655edad8f7ee8",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 561.8,
      "categories": [],
      "date": 2021-05-01T06:25:00.000Z,
      "description": "Dummy income 89",
      "fromAccount": null,
      "id": "624befa06ba655edad8f8087",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1545.25,
      "categories": [],
      "date": 2021-04-29T02:06:00.000Z,
      "description": "Dummy income 78",
      "fromAccount": null,
      "id": "624bef9e6ba655edad8f8050",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1552.1,
      "categories": [],
      "date": 2021-04-28T23:10:00.000Z,
      "description": "Dummy income 18",
      "fromAccount": null,
      "id": "624bef936ba655edad8f7f24",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 20.81,
      "categories": [],
      "date": 2021-04-28T22:24:00.000Z,
      "description": "Dummy income 83",
      "fromAccount": null,
      "id": "624bef9f6ba655edad8f8069",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1025.85,
      "categories": [],
      "date": 2021-04-25T23:36:00.000Z,
      "description": "Dummy income 26",
      "fromAccount": null,
      "id": "624bef946ba655edad8f7f4c",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 86.6,
      "categories": [],
      "date": 2021-04-16T06:52:00.000Z,
      "description": "Dummy income 0",
      "fromAccount": null,
      "id": "624bef906ba655edad8f7eca",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 424.87,
      "categories": [],
      "date": 2021-04-14T15:55:00.000Z,
      "description": "Dummy income 3",
      "fromAccount": null,
      "id": "624bef906ba655edad8f7ed9",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1138.28,
      "categories": [],
      "date": 2021-04-09T06:01:00.000Z,
      "description": "Dummy income 91",
      "fromAccount": null,
      "id": "624befa16ba655edad8f8091",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1649.63,
      "categories": [],
      "date": 2021-04-06T05:01:00.000Z,
      "description": "Dummy income 45",
      "fromAccount": null,
      "id": "624bef986ba655edad8f7fab",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1494.56,
      "categories": [],
      "date": 2021-03-27T04:19:00.000Z,
      "description": "Dummy income 53",
      "fromAccount": null,
      "id": "624bef996ba655edad8f7fd3",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 22.22,
      "categories": [],
      "date": 2021-03-22T09:28:00.000Z,
      "description": "Dummy income 48",
      "fromAccount": null,
      "id": "624bef996ba655edad8f7fba",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 8.33,
      "categories": [],
      "date": 2021-03-21T07:50:00.000Z,
      "description": "Dummy income 39",
      "fromAccount": null,
      "id": "624bef976ba655edad8f7f8d",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 200.18,
      "categories": [],
      "date": 2021-03-16T09:37:00.000Z,
      "description": "Dummy income 66",
      "fromAccount": null,
      "id": "624bef9c6ba655edad8f8014",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 526.83,
      "categories": [],
      "date": 2021-03-09T23:01:00.000Z,
      "description": "Dummy income 56",
      "fromAccount": null,
      "id": "624bef9a6ba655edad8f7fe2",
      "toAccount": "61460dd554ea082ad025677d",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 388.61,
      "categories": [],
      "date": 2021-03-07T04:35:00.000Z,
      "description": "Dummy income 30",
      "fromAccount": null,
      "id": "624bef956ba655edad8f7f60",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1548.66,
      "categories": [],
      "date": 2021-03-05T16:29:00.000Z,
      "description": "Dummy income 19",
      "fromAccount": null,
      "id": "624bef936ba655edad8f7f29",
      "toAccount": "61460d9454ea082ad0256762",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1714.34,
      "categories": [],
      "date": 2021-03-02T06:07:00.000Z,
      "description": "Dummy income 97",
      "fromAccount": null,
      "id": "624befa26ba655edad8f80af",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1704.16,
      "categories": [],
      "date": 2021-02-28T01:30:00.000Z,
      "description": "Dummy income 14",
      "fromAccount": null,
      "id": "624bef926ba655edad8f7f10",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 459.72,
      "categories": [],
      "date": 2021-02-23T13:28:00.000Z,
      "description": "Dummy income 77",
      "fromAccount": null,
      "id": "624bef9e6ba655edad8f804b",
      "toAccount": "61460d8554ea082ad0256759",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 493.54,
      "categories": [],
      "date": 2021-02-22T15:11:00.000Z,
      "description": "Dummy income 47",
      "fromAccount": null,
      "id": "624bef986ba655edad8f7fb5",
      "toAccount": "61460db554ea082ad0256774",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
    {
      "amount": 1598.18,
      "categories": [],
      "date": 2021-02-07T18:14:00.000Z,
      "description": "Dummy income 35",
      "fromAccount": null,
      "id": "624bef966ba655edad8f7f79",
      "toAccount": "61460da354ea082ad025676b",
      "userId": "61460d7354ea082ad0256749",
      "v": 0,
    },
  ],
  "hasNextPage": false,
  "hasPreviousPage": false,
  "limit": 101,
  "totalPageCount": 1,
  "totalRowCount": 101,
}
`;

exports[`IncomesService should return one income for user 1`] = `
{
  "amount": 3500,
  "categories": [],
  "date": 2023-01-10T11:12:00.000Z,
  "description": "Income13 to big money",
  "fromAccount": null,
  "id": "663df5ccd8ef53dcb2bc93a0",
  "toAccount": "663df55ad8ef53dcb2bc9347",
  "userId": "61460d7354ea082ad0256749",
  "v": 0,
}
`;
